[package]
name = "rs-ltsv-filter"
version = "0.2.0"
edition = "2021"

description = "stdin(LTSV) -> stdout(filtered)"
license = "Apache-2.0"
documentation = "https://docs.rs/crate/rs-ltsv-filter/latest"
repository = "https://github.com/takanoriyanagitani/rs-ltsv-filter"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "forbid"

[profile.release-wasi]
inherits = "release"
lto = true
strip = true
opt-level = 's'
codegen-units = 16

[dependencies]
